--- a/book/book.tex
+++ b/book/book.tex
@@ -13,7 +13,7 @@
 \newcommand{\thetitle}{Modeling and Simulation in Python}
 \newcommand{\thesubtitle}{}
 \newcommand{\theauthors}{Allen B. Downey}
-\newcommand{\theversion}{0.0.7}
+\newcommand{\theversion}{0.7.1}
 
 
 %%%% Both LATEX and PLASTEX
@@ -556,7 +556,7 @@ bikeshare = System(olin=10, wellesley=2)
 The first line is an {\bf import statement} that tells Python
 to read {\tt modsim}, which is a collection of functions, including \py{sqrt}, which we used in the previous section, \py{System}, which we are using now, and many more.
 
-\py{System} creates a {\bf system object} which is a collection of {\bf ??? variables}.  In this example, the system variables are named \py{olin} and \py{wellesley} and they represent the number of bikes at Olin and Wellesley.  The initial values of are 10 and 2, indicating that there are 10 bikes at Olin and 2 at Wellesley.  The system object created by \py{System} is assigned to a new variable named \py{bikeshare}.
+\py{System} creates a {\bf system object} which is a collection of {\bf system variables}.  In this example, the system variables are named \py{olin} and \py{wellesley} and they represent the number of bikes at Olin and Wellesley.  The initial values of are 10 and 2, indicating that there are 10 bikes at Olin and 2 at Wellesley.  The system object created by \py{System} is assigned to a new variable named \py{bikeshare}.
 
 We can read the variables inside a system object using ``dot notation'', like this:
 
@@ -1775,7 +1775,7 @@ system = System(t0=first_year, t_end=last_year,
 Next we'll wrap the code from the previous section in a function:
 
 \begin{python}
-def run_model1(system):
+def run_simulation1(system):
     model = TimeSeries()
     model[system.t0] = system.p0
     for year in arange(system.t0, system.t_end):
@@ -1783,7 +1783,7 @@ def run_model1(system):
     system.model = model
 \end{python}
 
-When \py{run_model1} runs, it creates a new series that contains the result of the simulation, and stores it as a new system variable, \py{model}. 
+When \py{run_simulation1} runs, it creates a new series that contains the result of the simulation, and stores it as a new system variable, \py{model}. 
 
 To plot the results, we define a new function:
 
@@ -1802,7 +1802,7 @@ There's nothing new there except \py{ylim}, which specifies the limits of the $y
 Finally, we can run it like this.
 
 \begin{python}
-run_model1(system)
+run_simulation1(system)
 plot_model(system)
 \end{python}
 
@@ -1815,7 +1815,7 @@ The biggest problem with the constant growth model is that it doesn't make any s
 On the order hand, if some fraction of the population dies each year, and some fraction gives birth, we can compute the net change in the population like this:
 
 \begin{python}
-def run_model2(system):
+def run_simulation2(system):
     model = TimeSeries()
     model[system.t0] = system.p0
     for year in arange(system.t0, system.t_end):
@@ -1835,7 +1835,7 @@ system.birth_rate = 0.027
 Then I ran and plotted the model:
 
 \begin{python}
-run_model2(system)
+run_simulation2(system)
 plot_model(system)
 \end{python}
 
@@ -1862,7 +1862,7 @@ We will try out these variations, but first, let's clean up the code one more ti
 
 \section{Factoring out the update function}
 
-\py{run_model1} and \py{run_model2} are nearly identical except for the body of the \py{for} loop, where we compute the population for the next year.
+\py{run_simulation1} and \py{run_simulation2} are nearly identical except for the body of the \py{for} loop, where we compute the population for the next year.
 
 Rather than repeat identical code, we can separate the things that change from the things that don't.  First, we'll pull the body of the loop out and make it a function:
 
@@ -2645,19 +2645,19 @@ dtype: float64
 Now we can run the model over a sequence of time steps:
 
 \begin{python}
-def run_model(system, update_func):
+def run_simulation(system, update_func):
     state = system.init
     for i in range(system.t0, system.t_end):
         state = update_func(system, state)
     return state
 \end{python}
 
-The parameters of \py{run_model} are the \py{System} object, which contains the model parameters, initial conditions, and values of \py{t0} and \py{t_end}, and the update function.  The outline of this function should look familiar; it is similar to the function we used for the population model in Section~\ref{nowwithstate}.
+The parameters of \py{run_simulation} are the \py{System} object, which contains the model parameters, initial conditions, and values of \py{t0} and \py{t_end}, and the update function.  The outline of this function should look familiar; it is similar to the function we used for the population model in Section~\ref{nowwithstate}.
 
-We can call \py{run_model} like this:
+We can call \py{run_simulation} like this:
 
 \begin{python}
-run_model(sir, update1)
+run_simulation(sir, update1)
 \end{python}
 
 The result is the final state of the system:
@@ -2674,20 +2674,21 @@ This result indicates that after 14 weeks (98 days), about 52\% of the populatio
 
 \section{Collecting the results}
 
-The previous version of \py{run_model} only returns the state of the system at the end of the simulation, \py{t_end}, but we might want to see how the state changes over time.  We'll consider two ways to do that: first, using three \py{TimeSeries} objects, then using one \py{DataFrame}.
+The previous version of \py{run_simulation} only returns the state of the system at the end of the simulation, \py{t_end}, but we might want to see how the state changes over time.  We'll consider two ways to do that: first, using three \py{TimeSeries} objects, then using one \py{DataFrame}.
 
 Here's the first version:
 
 \begin{python}
-def run_model(system, update_func):
+def run_simulation(system, update_func):
     S = TimeSeries()
     I = TimeSeries()
     R = TimeSeries()
 
     state = system.init
-    S[0], I[0], R[0] = state
+    t0 = system.t0
+    S[t0], I[t0], R[t0] = state
     
-    for i in range(sir.t0, sir.t_end):
+    for i in range(system.t0, system.t_end):
         state = update_func(system, state)
         S[i+1], I[i+1], R[i+1] = state
     
@@ -2707,7 +2708,7 @@ At the end of the function, we store \py{S}, \py{I}, and \py{R} as attributes of
 Now we can run the function like this:
 
 \begin{python}
-run_model(sir, update1)
+run_simulation(sir, update1)
 \end{python}
 
 We'll use the following function to plot the results:
@@ -2736,15 +2737,19 @@ plot_results(sir.S, sir.I, sir.R)
 Figure~\ref{chap05-fig01} shows the result.  Notice that it takes about three weeks (21 days) for the outbreak to get going, and about six weeks (42 days) before it peaks.  The fraction of the population that's infected is never very high, but it adds up.  In total, almost half the population gets sick. 
 
 
-\section{Now with a DataFrame}
+\section{Now with a TimeFrame}
 
-If the number of state variables is small, storing them as separate \py{Series} objects might not be so bad.  But a better alternative is to use a \py{DataFrame}.  In Section~\ref{worldpopdata} we worked with \py{DataFrame} objects we got from \py{read_html}.  In this section we'll create a \py{DataFrame} and use it to store state variables.
+If the number of state variables is small, storing them as separate \py{TimeSeries} objects might not be so bad.  But a better alternative is to use a \py{TimeFrame}.  
 
-Here's a more concise version of \py{run_model}:
+\py{TimeFrame} objects are defined in \py{modsim.py}.  They are almost identical to the \py{DataFrame} objects we used in Section~\ref{worldpopdata}, with just a few changes I made to make them easier to use for our purposes.  If you want to know the details, you can read about it in \py{modsim.py}.
+
+we worked with \py{DataFrame} objects we got from \py{read_html}.  In this section we'll create a \py{DataFrame} and use it to store state variables.
+
+Here's a more concise version of \py{run_simulation}:
 
 \begin{python}
-def run_model(system, update_func):
-    df = DataFrame(columns=['S', 'I', 'R'])
+def run_simulation(system, update_func):
+    df = TimeFrame(columns=system.init.index)
     df.loc[system.t0] = system.init
     
     for i in range(system.t0, system.t_end):
@@ -2753,34 +2758,34 @@ def run_model(system, update_func):
     system.results = df
 \end{python}
 
-The first line creates an empty \py{DataFrame} with one column for each state variables.
+The first line creates an empty \py{TimeFrame} with one column for each state variables.
 
-Before the loop starts, we want to store the initial conditions in the \py{DataFrame} at \py{t0}.  Based on the way we've been using \py{TimeSeries} objects, it might be tempting to write:
+Before the loop starts, we want to store the initial conditions in the \py{TimeFrame} at \py{t0}.  Based on the way we've been using \py{TimeSeries} objects, it might be tempting to write:
 
 \begin{python}
 df[system.t0] = system.init
 \end{python}
 
-The problem is that when you use the bracket operator with a \py{DataFrame}, it selects a column, not a row.  For example, to select the first column, we could write
+The problem is that when you use the bracket operator with a \py{TimeFrame}, it selects a column, not a row.  For example, to select the first column, we could write
 
 \begin{python}
 df['S']
 \end{python}
 
-The result would be a time series.  To read or write a single row, we have to use \py{loc}, which stands for ``location".  So \py{df.loc[0]} reads a row from a \py{DataFrame} and 
+The result would be a time series.  To read or write a single row, we have to use \py{loc}, which stands for ``location".  So \py{df.loc[0]} reads a row from a \py{TimeFrame} and 
 
 \begin{python}
 df.loc[system.t0] = system.init
 \end{python}
 
-assigns the values from \py{system.init} to the first row of \py{df}.  Since the value on the right-hand side is a \py{State}, the assignment matches up the index from the \py{State} with the columns of the \py{DataFrame}; it assigns the \py{S} value from \py{system.init} to the \py{S} column of the \py{DataFrame}, and likewise with \py{I} and \py{R}.
+assigns the values from \py{system.init} to the first row of \py{df}.  Since the value on the right-hand side is a \py{State}, the assignment matches up the index from the \py{State} with the columns of the \py{TimeFrame}; it assigns the \py{S} value from \py{system.init} to the \py{S} column of the \py{TimeFrame}, and likewise with \py{I} and \py{R}.
 
 We can use the same feature to write the loop more concisely, assigning the \py{State} we get from \py{update_func} directly to the next row of \py{df}.  
 
-Finally, we store \py{df} as a new attribute of \py{system}.  We can call this version of \py{run_model} like this:
+Finally, we store \py{df} as a new attribute of \py{system}.  We can call this version of \py{run_simulation} like this:
 
 \begin{python}
-run_model(sir, update1)
+run_simulation(sir, update1)
 \end{python}
 
 And plot the results like this:
@@ -2790,7 +2795,7 @@ df = sir.results
 plot_results(df.S, df.I, df.R)
 \end{python}
 
-As we saw in Section~\ref{series}, we can use dot notation to select columns from the \py{DataFrame}.
+As we saw in Section~\ref{series}, we can use dot notation to select columns from the \py{TimeFrame}.
 
 
 \section{Metrics}
@@ -2831,7 +2836,7 @@ def add_immunization(system, fraction):
 \begin{python}
 sir2 = make_system(beta, gamma)
 add_immunization(sir2, 0.1)
-run_model(sir2, update1)
+run_simulation(sir2, update1)
 \end{python}
 
 For comparison, we ran the same model without immunization and plot the results.
@@ -2854,7 +2859,7 @@ def sweep_immunity(immunize_array):
     for fraction in immunize_array:
         sir = make_system(beta, gamma)
         add_immunization(sir, fraction)
-        run_model(sir, update1)
+        run_simulation(sir, update1)
         sweep[fraction] = calc_total_infected(sir)
     return sweep
 \end{python}
@@ -2939,11 +2944,11 @@ Now we can sweep a range of values for \py{spending} and use the simulation to c
 
 \begin{python}
 def sweep_hand_washing(spending_array):
-    sweep = Sweep([])
+    sweep = Sweep()
     for spending in spending_array:
         sir = make_system(beta, gamma)
         add_hand_washing(sir, spending)
-        run_model(sir, update1)
+        run_simulation(sir, update1)
         sweep[spending] = calc_total_infected(sir)
     return sweep
 \end{python}
@@ -2986,7 +2991,7 @@ And run the simulation for each dose:
 
 \begin{python}
 def sweep_doses(dose_array):
-    sweep = Sweep([])
+    sweep = Sweep()
     for doses in dose_array:
         fraction = doses / num_students
         spending = budget - doses * price_per_dose
@@ -2995,7 +3000,7 @@ def sweep_doses(dose_array):
         add_immunization(sir, fraction)
         add_hand_washing(sir, spending)
         
-        run_model(sir, update1)
+        run_simulation(sir, update1)
         sweep[doses] = calc_total_infected(sir)
 
     return sweep
@@ -3030,7 +3035,7 @@ For example, here's the code to create a \py{System} object with given values of
 
 \begin{python}
 sir = make_system(0.33, 0.25)
-run_model(sir, update1)
+run_simulation(sir, update1)
 print(calc_total_infected(sir))
 \end{python}
 
@@ -3050,7 +3055,7 @@ Then run the simulation for each value and print the results.
 \begin{python}
 for beta in beta_array:
     sir = make_system(beta, gamma)
-    run_model(sir, update1)
+    run_simulation(sir, update1)
     print(sir.beta, calc_total_infected(sir))
 \end{python}
 
@@ -3275,11 +3280,11 @@ c_array = np.log(s_inf_array) / (s_inf_array - 1)
 To get the total infected, we compute the difference between $s(0)$ and $s(\infty)$, then store the results in a \py{Series}:
 
 \begin{python}
-total_infected = 1 - s_inf_array
-frac_infected_analysis = Series(total_infected, index=c_array)
+frac_infected = 1 - s_inf_array
+frac_infected_series = Series(frac_infected, index=c_array)
 \end{python}
 
-Recall from Section~\ref{series} that a \py{Series} object contains an index, which is \py{c_array} in this example, and a corresponding sequence of values, which is \py{total_infected}.
+Recall from Section~\ref{series} that a \py{Series} object contains an index, which is \py{c_array} in this example, and a corresponding sequence of values, which is \py{frac_infected}.
 
 
 \section{Analysis and simulation}
@@ -3287,7 +3292,7 @@ Recall from Section~\ref{series} that a \py{Series} object contains an index, wh
 Now we can plot the results:
 
 \begin{python}
-plot(frac_infected_analysis)
+plot(frac_infected_series)
 \end{python}
 
 \begin{figure}
@@ -3311,6 +3316,296 @@ Well, at least in theory.  In practice, it might not work very well, because of 
 On the other hand, for larger contact numbers, nearly the entire population is infected, so the curve is quite flat.  In that case we would not be able to estimate $c$ precisely, because any value greater than 3 would yield effectively the same results.  Fortunately, this is unlikely to happen in the real world; very few epidemics affect anything like 90\% of the population.
 
 In summary, the SIR model has limitations; nevertheless, it provides insight into the behavior of infectious disease, especially the phenomenon of herd resistance.  As we saw in the previous chapter, if we know the parameters of the model, we can use it to evaluate possible interventions.  And as we saw in this chapter, we might be able to use data from earlier outbreaks to estimate the parameters.
+
+
+
+\chapter{Thermal systems}
+
+Intro
+
+\section{The coffee cooling problem}
+
+The coffee cooling problem was discussed by Jearl Walker in Scientific American in 1977\footnote{Walker, ``The Amateur Scientist", Scientific American, Volume 237, Issue 5, November 1977.}, and since then it has become a standard example of modeling and simulation.
+
+Here is my version of the problem:
+
+\begin{quote}
+Suppose I stop on the way to work to pick up a cup of coffee, which I take with milk.  Assuming that I want the coffee to be as hot as possible when I arrive at work, should I add the milk at the coffee shop, wait until I get to work, or add the milk at some point in between?
+\end{quote}
+
+To help answer this question, I made a trial run with the milk and coffee in separate containers and took some measurements:
+
+\begin{itemize}
+
+\item When served, the temperature of the coffee is \SI{90}{\celsius}.  The volume is \SI{300}{mL}.
+
+\item The milk is at an initial temperature of \SI{5}{\celsius}, and I use about \SI{50}{mL}.
+
+\item The ambient temperature in my car is \SI{22}{\celsius}.
+
+\item The coffee is served in a moderately well insulated cup.  When I arrive at work after 30 minutes, the temperature of the coffee has fallen to \SI{70}{\celsius}.
+
+\item The milk container is not as well insulated.  After 15 minutes, it warms up to \SI{20}{\celsius}, nearly the ambient temperature.
+
+\end{itemize}
+
+To use this data and answer the question, we'll need to know something about temperature and heat, and we'll have to make some modeling decisions.
+
+
+\section{Temperature and heat}
+
+To understand how coffee cools (and milk warms), we need a model of temperature and heat.  {\bf Temperature} is a property of an object or a system; it quantifies how hot or cold the object is, which is related to the average velocity of the particles that make up the object.  As an object cools, its particles slow down.
+
+{\bf Heat} is a flow of energy from one object to another.  As the coffee cools, heat flows from the coffee, through the container, and into the surrounding environment.
+
+Heat is related to temperature by the following equation (see \url{https://en.wikipedia.org/wiki/Thermal_mass}):
+%
+\[ Q = C \Delta T \]
+%
+where $Q$ is the amount of heat transferred to an object, usually measured in joules (\si{J}), $\Delta T$ is the change in temperature of the object, measured in degrees Celsius (\si{\celsius}), and $C$ is the {\bf thermal mass} which quantifies how much energy it takes to heat or cool it, in joules per degree Celsius (\si{J/\celsius}).
+
+For objects made primarily from one material, thermal mass can be computed like this:
+%
+\[ C = m c_p \]
+%
+where $m$ is the mass of the object and $c_p$ is the {\bf specific heat capacity} of the material (see \url{https://en.wikipedia.org/wiki/Heat_capacity#Specific_heat_capacity}).
+
+The specific heat capacity of coffee is probably close to that of water, which is \SI{4.2}{J/g/\celsius}.
+
+Assuming that the density of coffee is close to that of water, which is \SI{1}{g/ml}, the mass of \SI{300}{mL} of coffee is \SI{300}{g}, and the thermal mass is \SI{1260}{J/\celsius}.  So when the coffee cooled from \SI{90}{\celsius} to \SI{70}{\celsius}, the change in temperature, $\Delta T$ was \SI{20}{\celsius}, which means that \SI{25200}{J} of heat energy were transferred from the coffee to the surrounding environment, presumably the cup holder and air in my car.
+
+To give you a sense of how much energy that is, if you were able to harness all of that heat to do work (which you cannot), you could use it to lift a cup of coffee from sea level to \SI{8571}{m}, just shy of the height of Mount Everest, \SI{8848}{m}.
+
+NOTE: That seems crazy to me.  I need to double-check that I have not messed this up somehow.
+
+Assuming that the cup has less mass than the coffee, and it made from a material with lower a specific heat, we can ignore the thermal mass of the cup.
+
+
+\section{Heat transfer}
+
+In a situation like the coffee cooling problem, there are three ways heat flows from one object to another (see \url{https://en.wikipedia.org/wiki/Heat_transfer}):
+
+\begin{itemize}
+
+\item Conduction: When objects at different temperatures come into contact, the faster-moving particles of the higher-temperature object transfer kinetic energy to the slower-moving particles of the lower-temperature object.  The energy transfer is a form of heat flow.
+
+\item Convection: When particles in a gas or liquid flow from place to place, they carry heat energy with them.  Fluid flows can be caused by external action, like stirring, or by internal differences in temperature.  For example, you might have heard that hot air rises, which is a form of ``natural convection".
+
+\item Radiation: As the particles in an object move due to thermal energy, they emit electromagnetic radiation.  The heat energy carried by this radiation depends on properties of the surface of the object, including its {\bf emissivity}, and on its temperature.  See \url{https://en.wikipedia.org/wiki/Thermal_radiation}.
+
+\end{itemize}
+
+For objects like coffee in a car, thermal radiation is much smaller than 
+heat transfer due to conduction and convection, so we will ignore it.
+
+Convection can be a complex topic, since it often depends on details of fluid flow in three dimensions.  But for this problem we will be able to get away with a simple model called ``Newton's law of cooling".
+
+
+\section{Newton's law of cooling}
+
+Newton's law of cooling asserts that the temperature rate of change for an object is proportional to the difference in temperature between the object and the surrounding environment:
+%
+\[ \frac{dT}{dt} = -r (T - T_{env}) \]
+%
+where $T$, the temperature of the object, is a function of time, $t$; $T_env$ is the temperature of the environment, and $r$ is a constant that characterizes how quickly heats moves between across the boundary between the system and the environment.
+
+Newton's so-called ``law" is really a model in the sense that it is approximately true in some conditions, only roughly true in others, and not at all true in some.
+
+For example, if the primary mechanism of heat transfer is conduction, Newton's law is ``true", which is to say that $r$ is constant over a wide range of temperatures.  And sometimes we can estimate $r$ based on the material properties and shape of the object.
+
+When convection contributes a non-negligible fraction of heat transfer, $r$ might depend on temperature, but Newton's law is often accurate enough, at least over a narrow range of temperatures.  In this case $r$ usually has to be estimated experimentally, since it depends on details of surface shape, air flow, evaporation, etc.
+
+When radiation make up a substantial part of heat transfer, Newton's law is not a good model at all.  This is the case for objects in space or in a vacuum, and for objects at high temperatures, more than a few hundred degrees Celsius, say.
+
+However, for a situation like the coffee cooling problem, we expect this model to be quite good.
+
+
+\section{Implementation}
+
+To get started, let's forget about the milk temporarily and focus on the coffee.  I'll create a \py{State} object to represent the initial temperature:
+
+\begin{python}
+init = State(temp=90)
+\end{python}
+
+And a \py{System} object to contain the parameters of the system:
+
+\begin{python}
+coffee = System(init=init, T_env=22, r=0.01, t0=0, t_end=30)
+\end{python}
+
+The values of \py{T_env}, \py{t0}, and \py{t_end} come from the statement of the problem.  I chose the value of \py{r} arbitrarily for now; we will figure out how to estimate it soon.
+
+Strictly speaking, Newton's law is a differential equation, but over a short period of time we can approximate it with a difference equation:
+%
+\[ \Delta T = -r (T - T_{env}) \Delta t \]
+%
+where $\Delta t$ is a small time step, which will be \SI{1}{\minute} in our simulations, and $\Delta T$ is the change in temperature during that time step.
+
+One note: in other contexts, you might see $\Delta T$ used to denote the difference in temperature between the object and the environment, so don't get confused.
+
+Now we can write an update function:
+
+\begin{python}
+def update(system, state):
+    T = state.temp
+    T = T - system.r * (T - system.T_env)
+    return State(temp=T)
+\end{python}
+
+Because the time step is \SI{1}{\minute}, I have left it out of the calculation.
+
+% TODO: Revisit that decision.  Include the time step throughout?
+
+Now if we run 
+
+\begin{python}
+update(coffee, init)
+\end{python}
+
+we see that the temperature after one time step is \SI{89.3}{\celsius}, so the temperature drops by about \SI{0.7}{\celsius\per\minute}, at least for this value of \py{r}.
+
+Now we can use \py{run_simulation}, as defined in Section~\ref{???}, to simulate a series of time steps from \py{t0} to \py{t_end}:
+
+\begin{python}
+def run_simulation(system, update_func):
+    df = TimeFrame(columns=system.init.index)
+    df.loc[system.t0] = system.init
+    
+    for i in range(system.t0, system.t_end):
+        df.loc[i+1] = update_func(system, df.loc[i])
+    
+    system.results = df
+\end{python}
+
+and run it like this:
+
+\begin{python}
+run_simulation(coffee, update)
+\end{python}
+
+The result is a \py{TimeFrame} object with one row per time step and just one column, \py{temp}.  The temperature after 30 minutes is \SI{72.3}{\celsius}, which is a little higher than stated in the problem, \SI{70}{\celsius}.  We could adjust \py{r} by hand and find the right value by trial and error, but we can do better.
+
+
+\section{Using fsolve}
+
+SciPy provides a method called \py{fsolve} that finds the roots of non-linear equations.  As a silly example, suppose you want to find the roots of the polynomial
+%
+\[ f(x) = (x - 1)(x - 2)(x - 3) \]
+%
+where ``root" means a value of $x$ that makes $f(x)=0$.  Because of the way I wrote the polynomial, we can see that if $x=1$, the first factor is 0; if $x=2$, the second factor is 0; and if $x=3$, the third factor is 0, so those are the roots.
+
+But usually it's not that easy.  In that case \py{fsolve} can help.  First, we have to write a function that evaluates $f$:
+
+\begin{python}
+def func(x):
+    return (x-1) * (x-2) * (x-3)
+\end{python}
+
+Now we call \py{fsolve} like this:
+
+\begin{python}
+fsolve(func, x0=0)
+\end{python}
+
+The first argument is the function whose roots we want.  The second argument, \py{x0}, is an initial guess about where a root might be.  Generally, the closer the initial guess is to an actual root, the faster \py{fsolve} will run.  In this case, with the initial guess \py{x0=0}, the result is 1.
+
+Often \py{fsolve} finds the root that's closest to the initial guess.  In this example, when \py{x0=1.9}, \py{fsolve} returns 2, and when \py{x0=2.9}, \py{fsolve} returns 3.  But this behavior can be unpredictable: with \py{x0=1.5}, \py{fsolve} returns 3.
+
+So how can we use \py{fsolve} to estimate \py{r}?  First we'll make a function that takes the parameters of the system, including \py{r}, runs the simulation, and returns a \py{System} object:
+
+\begin{python}
+def run(volume, temp_init, r, t_end):
+    init = State(temp=temp_init)
+    system = System(volume=volume, init=init, T_env=22, 
+                    r=r, t0=0, t_end=t_end)
+    run_simulation(system, update)
+    return system
+\end{python}
+
+Now, we want to find the value of \py{r} that yields a final temperature of \SI{70}{\celsius}.  To work with \py{fsolve}, we need a function that takes \py{r} as a parameter and returns the difference between the final temperature and the goal:
+
+\begin{python}
+def error_func1(r):
+    system = run(volume=300, temp_init=90, r=r, t_end=30)
+    return final_temp(system) - 70
+\end{python}
+
+I call a function like this an ``error function" because the return value is the difference between what we got and what we wanted, that is, the error.
+
+We can test \py{error_func1} like this, using our initial guess for \py{r}:
+
+\begin{python}
+error_func1(r=0.01)
+\end{python}
+
+The result is an error of \SI{2.3}{\celsius}, because the final temperature with this value of \py{r} is too high.
+
+Now we can call \py{fsolve} like this:
+
+\begin{python}
+solution = fsolve(error_func1, 0.01)
+r_coffee = solution[0]
+\end{python}
+
+The return value from \py{fsolve} is an array with a single element, which is the root \py{fsolve} found.  In this example, \py{r_coffee} turns out to be about \py{0.012}, in units of \si{\per\minute}.
+
+As one of the exercises for this chapter, you will use the same process to estimate \py{r_milk}.
+
+
+\section{Mixing liquids}
+
+When we mix two liquids, the temperature of the mixture depends on the temperatures of the temperatures of the ingredients, but it might not be obvious how to compute it.
+
+Assuming there are no chemical reactions between the liquids that either produce or consume heat, the total thermal energy of the system is the same before and after mixing; in other words, thermal energy is {\bf conserved}.
+
+If the temperature of the first liquid is $T_1$, the temperature of the second liquid is $T_2$, and the final temperature of the mixture is $T$, the heat transfer into the first liquid is $C_1 (T - T_1)$ and the heat transfer into the second liquid is $C_2 (T - T2)$, where $C_1$ and $C_2$ are the thermal masses of the liquids.
+
+In order to conserve energy, these heat transfers must add up to 0:
+%
+\[ C_1 (T - T_1) + C_2 (T - T_2) = 0 \]
+%
+We can solve this equation for T:
+%
+\[ (C_1 T_1 + C_2 T_2) / (C_1 + C_2) \]
+%
+For the coffee cooling problem, we have the volumes of the liquids; to get their thermal masses, recall that thermal mass is related to mass, $m$, by specific heat, $c_p$:
+%
+\[ C = m c_p \]
+%
+And mass is related to volume $V$, by density, $\rho$ (see \url{https://en.wikipedia.org/wiki/Density}):
+%
+\[ m = \rho V \]
+%
+So the thermal mass of each ingredient is
+%
+\[ C = \rho V c_p \]
+%
+If we assume that the density and specific heat of the milk and coffee are equal, they drop out of the equation, and we can write:
+%
+\[ (V_1 T_1 + V_2 T_2) / (V_1 + V_2) \]
+%
+where $V_1$ and $V_2$ are the volumes of the liquids.  As an exercise, you can look up the density and specific heat of milk and see how good this approximation is.
+
+The following function takes two \py{System} objects that represent the coffee and milk, and returns a new \py{System} object that represents the mixture.
+
+\begin{python}
+def mix(s1, s2):
+    assert s1.t_end == s2.t_end
+    
+    volume = s1.volume + s2.volume
+    
+    temp = (s1.volume * final_temp(s1) + 
+            s2.volume * final_temp(s2)) / volume
+    
+    init = State(temp=temp)
+    mixture = System(volume=volume, init=init, T_env=22, 
+                    r=s1.r, t0=s1.t_end, t_end=30)
+    
+    return mixture
+\end{python}
+
+
 
 
 \backmatter
