--- a/code/chap01soln.ipynb
+++ b/code/chap01soln.ipynb
@@ -450,7 +450,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "bikeshare = System(olin=10, wellesley=2)"
